rewrote the instruction set doc generator in Java using AsciidoctorJ. So much easier than that nest of a generator that was in python. Direct JVM object access changed everything. And docs now run in a few seconds. Migrating (partial) llm model components into features so its easy to add behaviors to llms like traits/interfaces in objefct oriented programming.